--- a/packages/b/package.json
+++ b/packages/b/package.json
@@ -15,5 +15,9 @@
   ],
   "scripts": {
     "test": "node ./__tests__/b.test.mjs"
-  }
+  },
+  "publishConfig": {
+    "access": "public"
+  },
+  "gitHead": "fb238db16385293f0c92292f76c31d3b860398fe"
 }
