--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -28,5 +28,9 @@
   "devDependencies": {
     "@andytestgroup/lerna-test-a": "^1.0.0",
     "@andytestgroup/lerna-test-b": "^1.0.0"
-  }
+  },
+  "publishConfig": {
+    "access": "public"
+  },
+  "gitHead": "fb238db16385293f0c92292f76c31d3b860398fe"
 }
