--- a/package.json
+++ b/package.json
@@ -11,6 +11,6 @@
     "lerna": "^6.6.1"
   },
   "publishConfig": {
-    "registry":"https://npm.pkg.github.com"
+    "registry": "https://registry.npmjs.org/"
   }
 }
