--- a/packages/b/package.json
+++ b/packages/b/package.json
@@ -17,7 +17,7 @@
     "test": "node ./__tests__/b.test.mjs"
   },
   "publishConfig": {
-    "registry": "https://npm.pkg.github.com"
+    "registry": "https://registry.npmjs.org/"
   },
-  "gitHead": "e866b80385e6bdd80dd585c29e085c8239d531ea"
+  "gitHead": "c3f23f9a71d2ff1fc45bb97390f6f6ca96a0bfac"
 }
