--- a/packages/a/package.json
+++ b/packages/a/package.json
@@ -20,7 +20,7 @@
     "chalk": "^5.2.0"
   },
   "publishConfig": {
-    "registry": "https://registry.npmjs.org/"
-  },
+    "access": "public"
+},
   "gitHead": "186955451e7f7aca171dbe9ba5ad4e18f4c8b484"
 }
