--- a/packages/b/package.json
+++ b/packages/b/package.json
@@ -17,7 +17,7 @@
     "test": "node ./__tests__/b.test.mjs"
   },
   "publishConfig": {
-    "registry": "https://registry.npmjs.org/"
-  },
+    "access": "public"
+},
   "gitHead": "186955451e7f7aca171dbe9ba5ad4e18f4c8b484"
 }
